- Bugfix: normalizing a stack of CDockables did not put the stack at its old location if the stack was a child of a CWorkingArea. This was caused by the class "Placeholder" being unable to handle anything put "placeholder-properties".
- Bugfix: If DockableSelector receives a KeyEvent that opens its dialog, and the dialog is already open, just keep the dialog open. Don't close and reopen the dialog, because that only irritates the user.

[v1.1.2p14f]
- Bugfix: "Shrinking" big children of a ToolbarDockStation resulted in a NullPointerException
- Bugfix: Various bugs that prevented a user from dragging a toolbar-item to the screen
- API: A DockTitleFactory with priority "CLIENT" now overrides a DockTitleFactory that was loaded through an Extension

[v1.1.2p15]
- Bugfix: cancelling a DockRelocatorEvent did not reset the "onMove" flag
- Bugfix: the GlobalMouseDispatcher did not dispatch events to a MouseMotionListener
! API: renamed DockRelocator.setDragOnlyTitel to setDragOnlyTitle (which is the proper way to write the word 'title')

[v1.1.2p16]
- API: new property TabPane.USE_SMALL_MINIMUM_SIZE allows clients to use "really small" minimum sizes, or "good looking" minimum sizes (that are not very small at all)

[v1.1.2p16a]
- Bugfix: dropping a prepopulated CWorkingArea on anything did throw an unnecessary SplitDropTreeException

[v1.1.2p17]
- API: drag and drop operation can be cancelled by pressing CControl.KEY_CANCEL_OPERATION (default is ESCAPE)
- API: refined behavior of ActionContentModifier, if a modifier represents many properties (e.g. disabled and vertical) then it can have many backup modifiers (e.g. just 'disabled' or just 'vertical')
- Bugfix: many small fixes by Karl-Philipp Richter
- Bugfix: DockStations having width or height smaller or equal to 0 do no longer support drag and drop (because they are invisible to the user)